plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ssafy'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // openapi (swagger 3.0)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // Jasypt (Java Simplified Encryption)
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

    // Jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // for Reactive programming
//    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
//    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

//    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

     // Email 문의
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Vault
    implementation group: 'org.springframework.vault', name: 'spring-vault-core', version: '3.1.1'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // 이메일 문의 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('test') {
    useJUnitPlatform()
}
